# routes/web.php
@@ -1,21 +1,31 @@
 <?php
 
-
-
+use App\Http\Controllers\ProfileController;
 use Illuminate\Support\Facades\Route;
-use App\Http\Controllers\FormularioController;
-use App\Http\Controllers\CamposController;
 
-Route::get('/', [FormularioController::class, 'index']);
-Route::post('/formularios', [FormularioController::class, 'store'])->name('formularios');
-Route::get('/formularios/{id}', [FormularioController::class, 'show']);
-Route::get('/respostas/{id}', [CamposController::class, 'show'])->name('campos.show');
+/*
+|--------------------------------------------------------------------------
+| Web Routes
+|--------------------------------------------------------------------------
+|
+| Here is where you can register web routes for your application. These
+| routes are loaded by the RouteServiceProvider and all of them will
+| be assigned to the "web" middleware group. Make something great!
+|
+*/
 
+Route::get('/', function () {
+    return view('welcome');
+});
 
-Route::post('/formularios/{id}/campos', [CamposController::class, 'store'])->name('campos.store');
+Route::get('/dashboard', function () {
+    return view('dashboard');
+})->middleware(['auth', 'verified'])->name('dashboard');
 
-Route::post('/search', [FormularioController::class, 'search'])->name('search');
+Route::middleware('auth')->group(function () {
+    Route::get('/profile', [ProfileController::class, 'edit'])->name('profile.edit');
+    Route::patch('/profile', [ProfileController::class, 'update'])->name('profile.update');
+    Route::delete('/profile', [ProfileController::class, 'destroy'])->name('profile.destroy');
+});
 
-
-
-
+require __DIR__.'/auth.php';
